# task1_A

./: .gitignore  BaseShape.h  CMakeLists.txt  Line.cpp  Line.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Ray.cpp  Ray.h  Segment.cpp  Segment.h  Vector.cpp  Vector.h  main.cpp  other_func.cpp  other_func.h  task.h
